--- a/client/public/css/startup_forms.css
+++ b/client/public/css/startup_forms.css
@@ -15,6 +15,7 @@ textarea{
     border-radius: 5px;
 
     justify-content: center;
+    justify-content: space-around;
     align-items: center;
 
     font-size: 26px;
@@ -44,6 +45,8 @@ textarea{
     left: 0;
     position: absolute;
     padding-bottom:10px;
+    z-index:1;
+   
 }
 
 /* right logo */
@@ -54,6 +57,9 @@ textarea{
     top: 0;
     right: 0;
     position: absolute;
+    padding-bottom:10px;
+    z-index: 1;
+   
 }
 
 /* Top Banner */
@@ -62,10 +68,10 @@ textarea{
     font-family: "Arial Black", "Impact", "Courier New", monospace;
 
     width: 700px;
-    display: inline-block;
+    display: grid;
 
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
 
 
     border: 5px solid rgb(0, 0, 0);
@@ -75,7 +81,7 @@ textarea{
     align-items: center;
 
     position: relative;
-    z-index: 5;
+    z-index: -1;
 
     top: auto;
 
@@ -89,6 +95,7 @@ textarea{
     box-sizing: border-box;
 
     overflow: hidden;
+    
 }
 
 .startupHeader{
@@ -118,7 +125,7 @@ textarea{
     display: grid;
     float: right;
 
-    position: relative;
+    /*position: relative;*/
 }
 
 /* "create a password" field*/
